Remove token and fix username not showing

--- a/src/app/shared/nav/nav.component.css
+++ b/src/app/shared/nav/nav.component.css
@@ -1,5 +1,7 @@
 :host {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol';
     font-size: 14px;
     color: #333;
     box-sizing: border-box;
@@ -30,45 +32,4 @@
     align-items: center;
     color: white;
     font-weight: 600;
-}
-
-
-/* .active {
-    font-size: 1.2rem;
-    color: white !important;
-}
-
-.nav-link {
-    font-size: 1.2rem;
-    color: white;
-}
-
-.nav-link:hover {
-    color: white;
-    transform: scale(0.95);
-    transition: 0.3s;
-}
-
-.nav-link:hover::after {
-    transition: 1s;
-    transform: scale(1);
-} */
-
-.toolbar img {
-    margin: 0 16px;
-}
-
-.toolbar #twitter-logo {
-    height: 40px;
-    margin: 0 8px;
-}
-
-.toolbar #youtube-logo {
-    height: 40px;
-    margin: 0 16px;
-}
-
-.toolbar #twitter-logo:hover,
-.toolbar #youtube-logo:hover {
-    opacity: 0.8;
 }
